<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E0F7FA"
        tools:context="com.example.android.volleyballcounter.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:src="@drawable/ball" />

        <LinearLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_for_views"
                    android:text="@string/team_a"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_for_views"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_large" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_for_button"
                    android:layout_marginRight="@dimen/margin_for_button"
                    android:onClick="pointForTeamA"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/points_for_a" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sets"
                    android:textColor="#000"
                    android:padding="@dimen/padding_for_views"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sets_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_for_views"
                    android:text="@string/team_b"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_for_views"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_large" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_for_button"
                    android:layout_marginRight="@dimen/margin_for_button"
                    android:onClick="pointForTeamB"
                    android:text="@string/points_for_b" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sets"
                    android:textColor="#000"
                    android:padding="@dimen/padding_for_views"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sets_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/game_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textColor="#F00"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="20dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_message"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/asses_a"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/asses_team_a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="6dp"
                            android:text="0"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="@dimen/margin_for_button"
                            android:layout_marginRight="@dimen/margin_for_button"
                            android:textSize="@dimen/text_size_small"
                            android:onClick="assesTeamA"
                            android:text="@string/asses_for_a" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/asses_b"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/asses_team_b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="6dp"
                            android:text="0"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="@dimen/margin_for_button"
                            android:layout_marginRight="@dimen/margin_for_button"
                            android:textSize="@dimen/text_size_small"
                            android:onClick="assesTeamB"
                            android:text="@string/asses_for_b" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="reset"
                    android:text="@string/reset_button" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>